--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".BrowseActivity"
-            android:label="@string/app_name"
+            android:label="@string/app_label"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +19,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".sample.RevealCustomColorActivity" />
+        <activity
+            android:name=".sample.RevealCustomColorActivity"
+            android:label="@string/reveal_effect_label" />
     </application>
 
 </manifest>
