--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.uiandroid.examples"
-        minSdkVersion 10
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 2
         versionName "1.1"
@@ -44,4 +44,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.0'
 
     compile 'com.jakewharton:butterknife:7.0.1'
+
+    compile 'com.makeramen:roundedimageview:2.2.1'
 }
